styles/style.css
body {
    background-image: url('../assets/peakpx.jpg');
}

main {
    display: flex;
}

main>* {
    height: 100vh;
}

.left {
    background-color: red;
    width: 30vw;
}

.right {
    background-color: #f9fafb;
    width: 70vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.right>* {
    padding: 1rem 15rem 2rem 2rem;
}

.sign-up-cnt {
    background-color: white;
    box-shadow: 1.5px 1.5px 2px #bbbebe;
}

.sign-up-cnt h1 {
    padding-bottom: 1.5rem;
}

form.sign-up {
    display: grid;
    grid-template-columns: repeat(2, clamp(15.5rem, 27%, 25rem));
    column-gap: 1.5rem;
    row-gap: 1.25rem;
}

form.sign-up>* {
    display: flex;
    flex-direction: column;
}

form.sign-up input {
    width: clamp(15.5rem, 70%, 25rem);
    border: 2px solid #E5E7EB;
    border-radius: 5px;
    outline-style: none;
    box-shadow: none;
    padding: 0.1em 0.8em;
}

form.sign-up input[type="password"]:invalid {
    border-color: #da5d4d;
}

form.sign-up input[type="password"]:focus {
    box-shadow: inset #ff0000;
}

form.sign-up input:focus {
    border: 1.8px solid #1e8cc7;
    box-shadow: inset #1e8cc7;
}

